--- a/grade_lookup/src/main/res/layout/content_login.xml
+++ b/grade_lookup/src/main/res/layout/content_login.xml
@@ -73,6 +73,7 @@
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
 			android:layout_gravity="center"
+			android:gravity = "center"
 			android:layout_margin="12dp"
 			android:visibility="gone" />
 	</LinearLayout>
