--- a/grade_lookup/src/main/res/layout/grade_list_item.xml
+++ b/grade_lookup/src/main/res/layout/grade_list_item.xml
@@ -3,7 +3,9 @@
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="wrap_content"
 	android:layout_height="wrap_content"
-	android:layout_gravity="center"
+	android:layout_gravity="center_horizontal"
+	android:padding="12dp"
+	android:layout_margin="12dp"
 	app:cardBackgroundColor="#5cea3bcc"
 	app:cardCornerRadius="9dp">
 	<RelativeLayout
